Modify index.html, nav bar, hero image, slogan, search bar, left/right arrows in main

--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>台北一日遊</title>
-  <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>台北一日遊</title>
+    <link rel="stylesheet" href="../static/styles/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="top">
+        <nav>
+          <div>
+            <h2>台北一日遊</h2>
+          </div>
+          <div>
+            <ul>
+              <li>預定行程</li>
+              <li>登入/註冊</li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <section class="top">
+      <div class="hero-image"></div>
+      <div class="top-main">
+        <div class="top-main-content">
+          <div class="top-main-text">
+            <div class="slogan-main">輕鬆享受台北一日悠閒</div>
+            <div class="slogan-sub">探索每個角落，體驗城市的深度旅遊行程</div>
+          </div>
+          <div class="search">
+            <div class="search-bar">
+              <div class="search-input">
+                <input type="text" placeholder="輸入景點名稱查詢" />
+              </div>
+              <div class="magnifier"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <main>
+      <section class="main">
+        <div class="list-bar">
+          <div class="left">
+            <img src="../static/images/left-arrow.png" alt="left-arrow" />
+          </div>
+          <div class="mrt-list"></div>
+          <div class="right">
+            <img src="../static/images/right-arrow.png" alt="right-arrow" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="text">COPYRIGHT © 2021 台北一日遊</div>
+    </footer>
+  </body>
+  <script src="../static/script/index.js"></script>
 </html>
