Link modify in index.html

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>台北一日遊</title>
-    <link rel="stylesheet" href="../static/styles/style.css" />
+    <link rel="stylesheet" href="static/styles/style.css" />
   </head>
   <body>
     <header>
@@ -45,11 +45,11 @@
       <section class="main">
         <div class="list-bar">
           <div class="left">
-            <img src="../static/images/left-arrow.png" alt="left-arrow" />
+            <img src="static/images/left-arrow.png" alt="left-arrow" />
           </div>
           <div class="mrt-list"></div>
           <div class="right">
-            <img src="../static/images/right-arrow.png" alt="right-arrow" />
+            <img src="static/images/right-arrow.png" alt="right-arrow" />
           </div>
         </div>
       </section>
@@ -58,5 +58,5 @@
       <div class="text">COPYRIGHT © 2021 台北一日遊</div>
     </footer>
   </body>
-  <script src="../static/script/index.js"></script>
+  <script src="static/script/index.js"></script>
 </html>
