Modify index.html, checking render next page.

--- a/static/index.html
+++ b/static/index.html
@@ -45,16 +45,29 @@
       <section class="main">
         <div class="list-bar">
           <div class="left">
-            <img src="./static/images/left-arrow.png" alt="left-arrow" />
+            <img
+              src="./static/images/left-arrow.png"
+              alt="left-arrow"
+              id="left-arrow"
+            />
           </div>
-          <div class="mrt-list"></div>
+          <div class="mrt-list">
+            <div class="mrt-text-container"></div>
+          </div>
           <div class="right">
-            <img src="./static/images/right-arrow.png" alt="right-arrow" />
+            <img
+              src="./static/images/right-arrow.png"
+              alt="right-arrow"
+              id="right-arrow"
+            />
           </div>
+        </div>
+        <div class="attractions">
+          <div class="attractions-group"></div>
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="text">COPYRIGHT © 2021 台北一日遊</div>
     </footer>
   </body>
