Remove helping border line and console log, set initial conditions for some functions

--- a/static/index.html
+++ b/static/index.html
@@ -33,9 +33,9 @@
           <div class="search">
             <div class="search-bar">
               <div class="search-input">
-                <input type="text" placeholder="輸入景點名稱查詢" />
+                <input type="text" id="search-input-text" placeholder="輸入景點名稱查詢" />
               </div>
-              <div class="magnifier"></div>
+              <div class="magnifier" id="search-button"></div>
             </div>
           </div>
         </div>
