Modify attraction list width between 360~1200px, nav bar bug fix, add description when finding empty attraction, add a link for banner back to '/'

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       <div class="top">
         <nav>
           <div>
-            <h2>台北一日遊</h2>
+            <h2 onclick="location.href='/'">台北一日遊</h2>
           </div>
           <div>
             <ul>
@@ -33,7 +33,11 @@
           <div class="search">
             <div class="search-bar">
               <div class="search-input">
-                <input type="text" id="search-input-text" placeholder="輸入景點名稱查詢" />
+                <input
+                  type="text"
+                  id="search-input-text"
+                  placeholder="輸入景點名稱查詢"
+                />
               </div>
               <div class="magnifier" id="search-button"></div>
             </div>
