--- a/static/attraction.html
+++ b/static/attraction.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Attraction</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Attraction</title>
+    <link rel="stylesheet" href="../static/styles/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="top">
+        <nav>
+          <div>
+            <h2 onclick="location.href='/'">台北一日遊</h2>
+          </div>
+          <div>
+            <ul>
+              <li>預定行程</li>
+              <li>登入/註冊</li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="top" style="height: 100px;"></section>
+      <section class="attraction"></section>
+    </main>
+    <footer class="footer">
+      <div class="text">COPYRIGHT © 2021 台北一日遊</div>
+    </footer>
+    <script src="../static/script/attraction.js"></script>
+  </body>
 </html>
