modify attraction.html, attraction.js

--- a/static/index.html
+++ b/static/index.html
@@ -74,6 +74,6 @@
     <footer class="footer">
       <div class="text">COPYRIGHT © 2021 台北一日遊</div>
     </footer>
-    <script src="./static/script/index.js"></script>
+    <script src="./static/script/index.js" defer></script>
   </body>
 </html>
