--- a/static/booking.html
+++ b/static/booking.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Booking</title>
+    <link rel="stylesheet" href="../static/styles/style.css" />
+    <script src="../static/script/getToken.js" defer></script>
+    <script src="../static/script/authStatus.js" defer></script>
+    <script src="../static/script/authorizaion.js" defer></script>
+    <script src="../static/script/navBar.js" defer></script>
+    <script src="../static/script/booking.js" defer></script>
+  </head>
+  <body>
+    <header>
+      <div class="top">
+        <nav>
+          <div>
+            <h2 onclick="location.href='/'">台北一日遊</h2>
+          </div>
+          <div>
+            <ul>
+              <li id="nav-booking-button">預定行程</li>
+              <li id="signin-button">登入/註冊</li>
+              <li id="signout-button">登出系統</li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="booking-page">
+        <div class="booking-content">
+          <div class="booking-top"></div>
+          <div class="bookings">
+            <div class="booking-title"></div>
+            <div class="booking">
+              <div class="booking-image"></div>
+              <div class="booking-info">
+                <div class="booking-info-title"></div>
+                <div class="booking-date flex">
+                  <div class="booking-date-title title">日期：</div>
+                  <div class="booking-date-content"></div>
+                </div>
+                <div class="booking-time flex">
+                  <div class="booking-time-title title">時間：</div>
+                  <div class="booking-time-content"></div>
+                </div>
+                <div class="booking-fee flex">
+                  <div class="booking-fee-title title">費用：</div>
+                  <div class="booking-fee-content"></div>
+                </div>
+                <div class="booking-address flex">
+                  <div class="booking-address-title title">地點：</div>
+                  <div class="booking-address-content"></div>
+                </div>
+              </div>
+              <div class="booking-delete">
+                <img
+                  src="../static/images/trash-can.png"
+                  alt="trash-can"
+                  id="trash-can"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr class="separator" />
+        <div class="contact-info">
+          <div class="contact-info-title">您的聯絡資訊</div>
+          <div class="contect-name flex">
+            <div class="contect-name-title">聯絡姓名：</div>
+            <div class="contact-name-input"><input type="text" id="contact-name"/></div>
+          </div>
+          <div class="contact-email flex">
+            <div class="contact-email-title">聯絡信箱：</div>
+            <div class="contact-email-input"><input type="text" id="contact-email"/></div>
+          </div>
+          <div class="contact-phone flex">
+            <div class="contact-phone-title">手機號碼：</div>
+            <div class="contact-phone-input"><input type="text" id="contact-phone" placeholder="09xxxxxxxx"/></div>
+          </div>
+          <div class="contact-notice">
+            請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。
+          </div>
+        </div>
+        <hr class="separator" />
+        <div class="card-info">
+          <div class="card-info-title">信用卡付款資訊</div>
+          <div class="card-number flex">
+            <div class="card-number-title">卡片號碼：</div>
+            <div class="card-number-input"><input type="text" id="card-number" placeholder="**** **** **** ****"></div>
+          </div>
+          <div class="card-expire flex">
+            <div class="card-expire-title">過期時間：</div>
+            <div class="card-expire-input"><input type="text" id="card-expire" placeholder="MM/YY"></div>
+          </div>
+          <div class="card-credential flex">
+            <div class="card-credential-title">驗證密碼：</div>
+            <div class="card-credential-input"><input type="text" id="card-credential" placeholder="CVV"></div>
+          </div>
+        </div>
+        <hr class="separator" />
+        <div class="confirm-info">
+          <div class="confirm-fee flex">
+            <div class="comfirm-fee-title">總價：</div>
+            <div class="confirm-fee-content"></div>
+          </div>
+          <div class="confirm-area flex">
+            <div class="confirm-area-button">確認訂購並付款</div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="text">COPYRIGHT © 2021 台北一日遊</div>
+    </footer>
+  </body>
 </html>
