--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>台北一日遊</title>
     <link rel="stylesheet" href="./static/styles/style.css" />
+    <script src="./static/script/getToken.js" defer></script>
+    <script src="./static/script/authStatus.js" defer></script>
+    <script src="./static/script/authorizaion.js" defer></script>
+    <script src="./static/script/navBar.js" defer></script>
     <script src="./static/script/index.js" defer></script>
-    <script src="./static/script/signin.js" defer></script>
   </head>
   <body>
-    <object type="text/html" data="./static/header.html"></object>
     <header>
       <div class="top">
         <nav>
@@ -18,7 +20,7 @@
           </div>
           <div>
             <ul>
-              <li id="booking-button">預定行程</li>
+              <li id="nav-booking-button">預定行程</li>
               <li id="signin-button">登入/註冊</li>
               <li id="signout-button">登出系統</li>
             </ul>
