--- a/static/booking.html
+++ b/static/booking.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="../static/styles/style.css" />
     <script src="../static/script/getToken.js" defer></script>
     <script src="../static/script/authStatus.js" defer></script>
-    <script src="../static/script/module.js" defer></script>
     <script src="../static/script/authorizaion.js" defer></script>
     <script src="../static/script/navBar.js" defer></script>
-    <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.18.0" defer></script>
-    <script src="../static/script/tappay.js" defer></script>
     <script src="../static/script/booking.js" defer></script>
   </head>
   <body>
@@ -73,21 +70,15 @@
           <div class="contact-info-title">您的聯絡資訊</div>
           <div class="contect-name flex">
             <div class="contect-name-title">聯絡姓名：</div>
-            <div class="contact-name-input">
-              <input type="text" id="contact-name" />
-            </div>
+            <div class="contact-name-input"><input type="text" id="contact-name"/></div>
           </div>
           <div class="contact-email flex">
             <div class="contact-email-title">聯絡信箱：</div>
-            <div class="contact-email-input">
-              <input type="text" id="contact-email" />
-            </div>
+            <div class="contact-email-input"><input type="text" id="contact-email"/></div>
           </div>
           <div class="contact-phone flex">
             <div class="contact-phone-title">手機號碼：</div>
-            <div class="contact-phone-input">
-              <input type="text" id="contact-phone" placeholder="09xxxxxxxx" />
-            </div>
+            <div class="contact-phone-input"><input type="text" id="contact-phone" placeholder="09xxxxxxxx"/></div>
           </div>
           <div class="contact-notice">
             請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。
@@ -98,21 +89,15 @@
           <div class="card-info-title">信用卡付款資訊</div>
           <div class="card-number flex">
             <div class="card-number-title">卡片號碼：</div>
-            <div class="card-number-input">
-              <div class="tpfield" id="card-number"></div>
-            </div>
+            <div class="card-number-input"><input type="text" id="card-number" placeholder="**** **** **** ****"></div>
           </div>
           <div class="card-expire flex">
             <div class="card-expire-title">過期時間：</div>
-            <div class="card-expire-input">
-              <div class="tpfield" id="card-expire"></div>
-            </div>
+            <div class="card-expire-input"><input type="text" id="card-expire" placeholder="MM/YY"></div>
           </div>
           <div class="card-credential flex">
             <div class="card-credential-title">驗證密碼：</div>
-            <div class="card-credential-input">
-              <div class="tpfield" id="card-credential"></div>
-            </div>
+            <div class="card-credential-input"><input type="text" id="card-credential" placeholder="CVV"></div>
           </div>
         </div>
         <hr class="separator" />
@@ -122,7 +107,6 @@
             <div class="confirm-fee-content"></div>
           </div>
           <div class="confirm-area flex">
-            <div class="confirm-area-hint"></div>
             <div class="confirm-area-button">確認訂購並付款</div>
           </div>
         </div>
