Added tappay.js, modified booking.js thankyou.html css files

--- a/static/thankyou.html
+++ b/static/thankyou.html
@@ -4,8 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank You</title>
+  <link rel="stylesheet" href="../static/styles/style.css" />
+  <script src="../static/script/getToken.js" defer></script>
+  <script src="../static/script/authStatus.js" defer></script>
+  <script src="../static/script/module.js" defer></script>
+  <script src="../static/script/authorizaion.js" defer></script>
+  <script src="../static/script/navBar.js" defer></script>
+  <script src="../static/script/thankyou.js" defer></script>
+
 </head>
 <body>
+  <header>
+    <div class="top">
+      <nav>
+        <div>
+          <h2 onclick="location.href='/'">台北一日遊</h2>
+        </div>
+        <div>
+          <ul>
+            <li id="nav-booking-button">預定行程</li>
+            <li id="signin-button">登入/註冊</li>
+            <li id="signout-button">登出系統</li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="thankyou-page">
+      <div class="thankyou-content">
+        <div class="thankyou-top"></div>
+        <div class="orders">
+          <div class="order-title"></div>
+          <div class="order">
+            <div class="order-content"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="text">COPYRIGHT © 2021 台北一日遊</div>
+  </footer>
   
 </body>
 </html>
