--- a/static/board.html
+++ b/static/board.html
@@ -6,6 +6,17 @@
     <title>Board</title>
 </head>
 <body>
-    <h1>圖文留言版</h1>
+    <h1>圖文留言板</h1>
+    <div>
+        <label for="content">文字內容：</label>
+        <input type="text" name="content">
+    </div>
+    <div>
+        <label for="file">選擇上傳的圖片：</label>
+        <input type="file" name="file">
+    </div>
+    <div>
+        <button>送出</button>
+    </div>
 </body>
 </html>
