--- a/static/board.html
+++ b/static/board.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board</title>
+    <script src="../static/script/board.js" defer></script>
 </head>
 <body>
     <h1>圖文留言板</h1>
@@ -16,7 +17,7 @@
         <input type="file" name="file">
     </div>
     <div>
-        <button>送出</button>
+        <button id="upload-button">送出</button>
     </div>
 </body>
 </html>
