Modify /static/board.html /static/script/board.js

--- a/static/board.html
+++ b/static/board.html
@@ -9,12 +9,12 @@
 <body>
     <h1>圖文留言板</h1>
     <div>
-        <label for="content">文字內容：</label>
-        <input type="text" name="content">
+        <span>文字內容：</span>
+        <input type="text" name="content" id="board-content">
     </div>
     <div>
-        <label for="file">選擇上傳的圖片：</label>
-        <input type="file" name="file">
+        <span>選擇上傳的圖片(jpeg, png)：</span>
+        <input type="file" name="file" id="board-file" accept="image/png, image/jpeg">
     </div>
     <div>
         <button id="upload-button">送出</button>
