Modify getBoard.py board.js board.html postBoard.py, for rendering posts.

--- a/static/board.html
+++ b/static/board.html
@@ -18,7 +18,9 @@
     </div>
     <div>
         <button id="upload-button">送出</button>
+        <span id="status"></span>
     </div>
     <hr>
+    <div id="board"></div>
 </body>
 </html>
